# flake8_boolean_trap

./: .gitignore  .python-version  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: bumpversion.yml  ci.yaml  publish.yml
docs/: apidoc.md  conf.py  index.md  readme.md
docs/_static/css/: site.css
scripts/: build-docs  bump  docs-build  publish
src/: flake8_boolean_trap.py
tests/: checkme.py  flake8_boolean_trap_test.py
